# gh-commit-ledger

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  _config.yml  build.rs
src/: app.rs  cache.rs  cli.rs  clipboard.rs  config.rs  config_editor.rs  events.rs  gh.rs  lib.rs  main.rs  report.rs  report_task.rs  self_update.rs  startup.rs  terminal.rs  tui.rs  ui.rs
