[package]
name = "gh-commit-ledger"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
